multistrap (2.1.13) unstable; urgency=low

  * [INTL:da] Danish translation of multistrap (Closes: #614306)
  * [INTL:pt] Updated European Portuguese translation for
    manpage/documentation"  (Closes: #614381)
  * Fix device-table.pl to use correct minor device number in
    iterative mode (Closes: #615819)
  * Disable SecureApt if fakeroot is detected.

 -- Neil Williams <codehelp@debian.org>  Mon, 28 Feb 2011 09:17:33 +0000

multistrap (2.1.12) unstable; urgency=low

  * Fix hook implementation if no hooks in use
  * Accumulate warnings from system calls and hooks and report to user
    at the end of the operation.
  * Ensure that realpath does really exist (local test debugging) and
    guard against an undefined keyring pkg variable.

 -- Neil Williams <codehelp@debian.org>  Wed, 09 Feb 2011 17:19:37 +0000

multistrap (2.1.11) unstable; urgency=low

  * Fix examples in comments within device_table.txt to
    use consistent tabs. (Closes: #611808)
  * Add example for wheezy and use permanent codenames.
  * Remove workaround for apt from lenny.
  * Improve the fix for #553599 and generalise it. Handle making a real
    directory for amd64 to cope with libc6-amd64 [i386].
  * Add hook directory support, per configuration file, similar to
    pbuilder support.

 -- Neil Williams <codehelp@debian.org>  Mon, 07 Feb 2011 12:21:33 +0000

multistrap (2.1.10) experimental; urgency=low

  * Fix typo in sysvinit chroot.sh script.
  * run preinst scripts install command instead of upgrade
    (Closes: #611744)
  * Run the preinst scripts ahead of calling configure -a in native
    mode. Thanks to Daniel Baumann for spotting it.

 -- Neil Williams <codehelp@debian.org>  Tue, 01 Feb 2011 22:25:59 +0000

multistrap (2.1.9) experimental; urgency=low

  * Allow missing packages lines and add note about using omitdebsrc
    with debian-ports.
  * Allow multiple packages lines per section to support very long
    lists.