@@ -6,8 +6,10 @@ multistrap (2.1.13) unstable; urgency=low
   * Fix device-table.pl to use correct minor device number in
     iterative mode (Closes: #615819)
   * Disable SecureApt if fakeroot is detected.
+  * Protect device-table.pl realpath usage to allow relative
+    directories.
 
- -- Neil Williams <codehelp@debian.org>  Mon, 28 Feb 2011 09:17:33 +0000
+ -- Neil Williams <codehelp@debian.org>  Mon, 28 Feb 2011 16:25:53 +0000
 
 multistrap (2.1.12) unstable; urgency=low
 
